Fix a few issues with customer fetching Unit tests